src/test/resources/plang-strict/passing/004_assignment_variable_rhs.plang
**#Assignments by value.
**Memory:a=Integer(12),b=Integer(10)
program Vardecl
  Változók:
    a, b: Egész

  a := 10
  b := a
  a := 12
program_vége
