src/test/resources/plang-strict/parse-error/002_empty_decl.plang
**#Program with no statements should give syntax error
program empty
  Változók:
    a, b: Egész
program_vége
